# Yonti-os

./: .bazelrc  .gitignore  .markdownlint.yaml  AGENTS.md  BUILD.bazel  Cargo.toml  DESIGN.md  MODULE.bazel  README.md  run_tests.sh  rust-toolchain.toml  rustc-ice-2024-01-21T18_18_08-39470.txt  x86_64-yonti_os.json
.cargo/: config.toml
.github/workflows/: ci.yml  markdown-lint.yml  opencode.yml  rust.yml
kernel/: BUILD.bazel  Cargo.toml
kernel/src/: allocator.rs  array_queue.rs  async_utils.rs  debug.rs  font.rs  framebuffer.rs  gdt.rs  interrupts.rs  lib.rs  log.rs  main.rs  memory.rs  monitor.rs  once_cell.rs  pic.rs  serial.rs  shell.rs  sse.rs  trace.rs  uart.rs  vga_buffer.rs
kernel/src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  tlsf.rs
kernel/src/apic/: ioapic.rs  lapic.rs  mod.rs
kernel/src/fs/: inode.rs  mod.rs
kernel/src/memory/: buddy.rs
kernel/src/task/: executor.rs  keyboard.rs  mod.rs
kernel/tests/: all.rs  basic_boot.rs  file_system.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
kernel/tests/common/: apic.rs  array_queue.rs  basic_boot.rs  buddy_allocator.rs  file_system.rs  framebuffer.rs  heap_allocation.rs
runner/: BUILD.bazel  Cargo.toml  build.rs  deny.toml
runner/src/: main.rs  test_runner.rs
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/fs/: mod.rs
tests/: basic_boot.rs  file_system.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
tools/: BUILD.bazel  deny.sh  qemu_runner.rs  qemu_test.bzl
