[package]
name = "yonti_os"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader_api = "0.11.15"
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex", "once", "lock_api"] }
x86_64 = "0.15.2"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.10.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.3.2"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootloader_api]
# Enable identity mapping of physical memory (replaces features = ["map_physical_memory"])
mappings.physical_memory.in_use = true
