[package]
name = "yonti_os"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[dependencies]
bootloader_api = "0.11.15"
spin = { version = "0.9.8", default-features = false, features = ["spin_mutex", "rwlock", "once", "lock_api"] }
x86_64 = "0.15.4"
pc-keyboard = "0.9.0"
linked_list_allocator = "0.10.6"

[dependencies.lazy_static]
version = "1.5.0"
features = ["spin_no_std"]

[dependencies.log]
version = "0.4.29"
default-features = false
features = ["release_max_level_info"]

[features]
default = []
log_debug = ["log/release_max_level_debug"]
log_trace = ["log/release_max_level_trace", "log_debug"]

[package.metadata.bootloader_api]
# Enable identity mapping of physical memory (replaces features = ["map_physical_memory"])
mappings.physical_memory.in_use = true
