[package]
name = "runner"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace]

[features]
default = ["uefi"]
uefi = ["dep:ovmf-prebuilt"]

[[bin]]
name = "runner"
path = "src/main.rs"

[[bin]]
name = "test-runner"
path = "src/test_runner.rs"

[build-dependencies]
bootloader = "0.11.15"

[dependencies]
bootloader = "0.11.15"
ovmf-prebuilt = { version = "0.2.8", optional = true }